@@ -1,3 +1,10 @@
+2006-12-14  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Fix: src/kahua/server.scm
+	  Use &#39; intead of &apos; as entity reference of ', because
+	  Internet Explorer(IE) cannot recognize &apos; in XHTML (I
+	  checked it on IE6SP2 on Windows XP SP2).
+
 2006-12-13  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* 0.9 released.
